--- a/episode 4/styles.css
+++ b/episode 4/styles.css
@@ -18,3 +18,27 @@
   margin: 10px;
   padding: 10px;
 }
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.res-card {
+  width: 180px;
+  height: 330px;
+  padding: 10px;
+  margin: 5px;
+  background-color: lightgray;
+}
+.res-card:hover {
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.search {
+  padding: 10px;
+}
+
+.res-logo {
+  width: 100%;
+}
