--- a/episode 6/styles.css
+++ b/episode 6/styles.css
@@ -46,3 +46,16 @@
   margin: 5px;
   cursor: pointer;
 }
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 180px;
+  height: 360px;
+  padding: 10px;
+  margin: 5px;
+  background-color: lightgray;
+}
