--- a/episode 6/styles.css
+++ b/episode 6/styles.css
@@ -59,3 +59,13 @@
   margin: 5px;
   background-color: lightgray;
 }
+
+.login {
+  padding: 0 20px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.filter {
+  display: flex;
+}
